<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">水务局测试</string>
    <string name="logining">登录中...</string>
    <string name="vpnLogin">VPN登录不支持自动登录</string>
    <string name="title_content">移动办公系统</string>
    <string name="title_header">水务局智慧政务</string>

    <string name="test_http_proxy">Test Http Proxy</string>
    <string name="test_socket_proxy">Test Socket Proxy</string>
    <string name="test_dns">Test DNS</string>
    <string name="device_ID">Device ID </string>
    <string name="demo">VPN SDK Demo</string>
    <string name="warning">WARNING</string>
    <string name="device_empty">Device name cannot be empty.</string>
    <string name="device_not_valid">The valid length of device\'s name is 1-64</string>
    <string name="user_empty">Username cannot be empty.</string>
    <string name="password_empty">Password is empty.</string>
    <string name="lblPassword">Password</string>
    <string name="user_pwd_error">Please check your username and password.</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="valid_code">Valid Code</string>
    <string name="network_error">Connection to server failed.</string>
    <string name="auth">Authentication</string>
    <string name="dev_reg">Device Registration</string>
    <string name="connect">Connect</string>
    <string name="vpn_idle">VPN is not running</string>
    <string name="vpn_connecting">VPN is connecting...</string>
    <string name="vpn_disconnecting">VPN is disconnecting...</string>
    <string name="vpn_connected">VPN connected.</string>
    <string name="disconnect">Disconnect</string>
    <string name="vpn_reconnecting">VPN is reconnecting...</string>
    <string name="vpn_server">VPN Server</string>
    <string name="vpn_uname">VPN Username</string>
    <string name="vpn_password">VPN Password</string>
    <string name="vpn_method">VPN Method</string>
    <string name="setting">Advanced Settings</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="uri">URL</string>
    <string name="go">Go</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="dns_config">DNS domains</string>
    <string name="save_dns_config">Save DNS Config</string>
    <string name="dns_config_success">DNS configuration success!</string>
    <string name="dns_config_failed">"DNS configuration failed, error %d"</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>