<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/demo"
            android:textColor="@android:color/white"
            style="@android:style/TextAppearance.DeviceDefault.Large" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/vpn_server" >
        </TextView>

        <EditText
            android:id="@+id/textServer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" >

        </EditText>
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/vpn_method" >
        </TextView>

        <EditText
            android:id="@+id/method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/vpn_uname" >
        </TextView>

        <EditText
            android:id="@+id/textUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/vpn_password" >
        </TextView>

        <EditText
            android:id="@+id/textPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/valid_code" >
        </TextView>

        <EditText
            android:id="@+id/txtValidCode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone" >

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonVPN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:textColor="#FFFFFF"
            android:text="@string/connect"
            style="@android:style/TextAppearance.DeviceDefault.Medium" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vpn_idle" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textConfiguration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" >
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/textDeviceId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="clickDev"
        android:text="@string/device_ID"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" >
    </TextView>
	<View android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <!-- <Button
            android:id="@+id/btnTestDns"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="clickTestDns"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:text="@string/test_dns"
            style="@android:style/TextAppearance.DeviceDefault.Medium" >
        </Button> -->
    </LinearLayout>

</LinearLayout>